# llama3-rag-cpu

./: ollama.py  pyproject.toml
