[tool.poetry]
name = "llama3-cpu"
version = "0.1.0"
description = "Llama test"
authors = ["fpmacedo <lipe_macedo@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-community = "^0.0.26"
sentence-transformers = "^2.7.0"
faiss-cpu = "^1.8.0"
pypdf = "^4.2.0"
unstructured = "^0.13.4" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
